turn on google calendar

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -78,9 +78,9 @@ life360:
   warning_threshold: 2
   error_threshold: 3
 
-# google:
-#   client_id: !secret google_cal_client_id
-#   client_secret: !secret google_cal_client_secret
+google:
+  client_id: !secret google_cal_client_id
+  client_secret: !secret google_cal_client_secret
 
 mqtt:
   broker: 192.168.1.115
