--- a/automation/automation-system.yaml
+++ b/automation/automation-system.yaml
@@ -1,5 +1,5 @@
 # Set theme on HA start
-  - alias: Set theme and dryer state at startup
+  - alias: Set theme and states at startup
     initial_state: 'on'
     trigger:
      - platform: homeassistant
@@ -11,5 +11,10 @@
       - service: mqtt.publish
         data:
           topic: hass/state/dryer
+          payload: 'Idle'
+          retain: 'true'
+      - service: mqtt.publish
+        data: 
+          topic: hass/state/washer
           payload: 'Idle'
           retain: 'true'
