--- a/sensors.yaml
+++ b/sensors.yaml
@@ -255,6 +255,7 @@
 - platform: mqtt
   name: "Plug 1 Power State"
   state_topic: "stat/sonoff-plug-1/POWER"
+  value_template: "{{value_json['POWER']}}"
 - platform: command_line
   name: CPU Temperature
   command: "cat /sys/class/thermal/thermal_zone0/temp"
