--- a/configuration.yaml
+++ b/configuration.yaml
@@ -176,6 +176,10 @@ fastdotcom:
   scan_interval:
       minutes: 120
 
+pi_hole:
+  host: 192.168.1.115
+  
+
 ################
 # Files to include
 ################
