--- a/automation/automation-notifications.yaml
+++ b/automation/automation-notifications.yaml
@@ -205,3 +205,14 @@
       data_template:
         message: 'The temperature outside is currently {{ states.sensor.dark_sky_temperature.state }} degrees, consider starting the cars'
         cache: false
+- alias: Send alert to Sarah's phone when house temperature is below 18
+  description: ''
+  trigger:
+  - platform: template
+    value_template: '{{ states.climate.kitchen_thermostat.attributes.current_temperature
+      <= 18 }}'
+  condition: []
+  action:
+  - data:
+      message: The kitchen thermostat temperature is below 18
+    service: notify.telegram_sarah
