--- a/sensors.yaml
+++ b/sensors.yaml
@@ -301,7 +301,7 @@
     printer_on_peak_cost_today:
       friendly_name: Printer On-Peak Hours Cost Today
       unit_of_measurement: '¢'
-      template_value: {{ (( sensor.printer_daily_onpeak * float )20.8) | round(2) }}
+      template_value: {{ (( sensor.printer_daily_onpeak * float ) * 20.8) | round(2) }}
     printer_mid_peak_cost_today:
       friendly_name: Printer Mid-Peak Hours Cost Today
       unit_of_measurement: '¢'
