--- a/sensors.yaml
+++ b/sensors.yaml
@@ -300,28 +300,28 @@
   sensors:
     printer_cost_daily:
       friendly_name: Printer Cost Daily
-      unit_of_measurement: '¢'
+      unit_of_measurement: '$'
       value_template: > 
-        {% set onpeak = ((states.sensor.printer_daily_onpeak.state | float ) * 20.8) %}
-        {% set midpeak = (( states.sensor.printer_daily_midpeak.state | float ) * 14.4 ) %}
-        {% set offpeak = (( states.sensor.printer_daily_offpeak.state | float ) * 10.1) %}
+        {% set onpeak = ((states.sensor.printer_daily_onpeak.state | float ) * 0.208) %}
+        {% set midpeak = (( states.sensor.printer_daily_midpeak.state | float ) * 0.144 ) %}
+        {% set offpeak = (( states.sensor.printer_daily_offpeak.state | float ) * 0.101) %}
         {% set total = onpeak + midpeak + offpeak %}
-        {{ total | round(2) }}
+        {{ total | round(4) }}
     printer_cost_weekly:
       friendly_name: Printer Cost Weekly
-      unit_of_measurement: '¢'
+      unit_of_measurement: '$'
       value_template: > 
-        {% set onpeak = ((states.sensor.printer_weekly_onpeak.state | float ) * 20.8) %}
-        {% set midpeak = (( states.sensor.printer_weekly_midpeak.state | float ) * 14.4 ) %}
-        {% set offpeak = (( states.sensor.printer_weekly_offpeak.state | float ) * 10.1) %}
+        {% set onpeak = ((states.sensor.printer_weekly_onpeak.state | float ) * 0.208) %}
+        {% set midpeak = (( states.sensor.printer_weekly_midpeak.state | float ) * 0.144 ) %}
+        {% set offpeak = (( states.sensor.printer_weekly_offpeak.state | float ) * 0.101) %}
         {% set total = onpeak + midpeak + offpeak %}
-        {{ total | round(2) }}
+        {{ total | round(4) }}
     printer_cost_monthly:
       friendly_name: Printer Cost Monthly
-      unit_of_measurement: '¢'
+      unit_of_measurement: '$'
       value_template: > 
-        {% set onpeak = ((states.sensor.printer_monthly_onpeak.state | float ) * 20.8) %}
-        {% set midpeak = (( states.sensor.printer_monthly_midpeak.state | float ) * 14.4 ) %}
-        {% set offpeak = (( states.sensor.printer_monthly_offpeak.state | float ) * 10.1) %}
+        {% set onpeak = ((states.sensor.printer_monthly_onpeak.state | float ) * 0.208) %}
+        {% set midpeak = (( states.sensor.printer_monthly_midpeak.state | float ) * 0.144 ) %}
+        {% set offpeak = (( states.sensor.printer_monthly_offpeak.state | float ) * 0.101) %}
         {% set total = onpeak + midpeak + offpeak %}
-        {{ total | round(2) }}
+        {{ total | round(4) }}
