--- a/input_number.yaml
+++ b/input_number.yaml
@@ -38,10 +38,4 @@ front_hall_light_brightness:
   initial: 114
   min: 0
   max: 255
-  step: 1
-hydro_rate_onpeak_winter:
-  name: Hydro Rate On-Peak - Winter
-  initial: 0.208
-  min: 0.208
-  max: 0.208
-  step: 0.1
+  step: 1S
