--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -195,18 +195,18 @@ views:
             - type: custom:mini-media-player
               entity: media_player.vizio_smartcast
       - type: custom:mini-graph-card
-        name: Washing Machine Energy Consumption
+        name: Washing Machine Daily Cost
         entities:
-        - entity: sensor.washer_energy_yesterday
+        - entity: sensor.washer_cost_daily
         hours_to_show: 168
         aggregate_func: max
         points_per_hour: 0.04
         show:
           graph: bar
       - type: custom:mini-graph-card
-        name: 3D Printer Energy Consumption
+        name: 3D Printer Daily Cost
         entities:
-        - entity: sensor.plug_1_energy_yesterday
+        - entity: sensor.printer_cost_daily
         hours_to_show: 168
         aggregate_func: max
         points_per_hour: 0.04
