--- a/automation/automation-lights.yaml
+++ b/automation/automation-lights.yaml
@@ -1,13 +1,13 @@
 - alias: Turn on bedroom lights before bed
   trigger:
-  - entity_id: media_player.vizio_smartcast
+  - entity_id: media_player.living_room_chromecast
     platform: state
     from: "on"
     to: "off"
     for: 00:01:00
   condition: 
   - condition: state
-    entity_id: media_player.vizio_smartcast
+    entity_id: media_player.living_room_chromecast
     state: "off"
   - condition: time
     after: "21:00:00"
