--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -241,7 +241,7 @@ views:
             hide: 
               power: true
           - type: custom:mini-media-player
-            entity: media_player.vizio_smartcast
+            entity: media_player.living_room_chromecast
             source: full
             hide:
               volume: true
