--- a/sensors.yaml
+++ b/sensors.yaml
@@ -254,8 +254,8 @@
   payload_not_available: "Offline"
 - platform: mqtt
   name: "Plug 1 Power State"
-  state_topic: "stat/sonoff-plug-1/POWER"
-  #value_template: "{{value_json['POWER']}}"
+  state_topic: "tele/sonoff-plug-1/STATE"
+  value_template: "{{value_json['POWER']}}"
   icon: mdi:printer-3d
 - platform: command_line
   name: CPU Temperature
