--- a/sensors.yaml
+++ b/sensors.yaml
@@ -235,12 +235,30 @@
   payload_available: "Online"
   payload_not_available: "Offline"
 - platform: mqtt
+  name: "Plug 2 Energy Today"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Today'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-2/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
   name: "Plug 1 Energy Yesterday"
   state_topic: "tele/sonoff-plug-1/SENSOR"
   value_template: "{{value_json['ENERGY']['Yesterday'] }}"
   qos: 2
   unit_of_measurement : "kWh"
   availability_topic: "tele/sonoff-plug-1/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
+  name: "Plug 2 Energy Yesterday"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Yesterday'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-2/LWT"
   payload_available: "Online"
   payload_not_available: "Offline"
 - platform: mqtt
@@ -253,10 +271,23 @@
   payload_available: "Online"
   payload_not_available: "Offline"
 - platform: mqtt
+  name: "Plug 2 Energy Total"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Total'] }}"
+  qos: 2
+  unit_of_measurement : "kWh"
+  availability_topic: "tele/sonoff-plug-2/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
   name: "Plug 1 Power State"
   state_topic: "stat/sonoff-plug-1/POWER"
   #value_template: "{{value_json['POWER']}}"
   icon: mdi:printer-3d
+- platform: mqtt
+  name: "Plug 2 Power State"
+  state_topic: "stat/sonoff-plug-2/POWER"
+  #value_template: "{{value_json['POWER']}}"
 - platform: command_line
   name: CPU Temperature
   command: "cat /sys/class/thermal/thermal_zone0/temp"
@@ -274,6 +305,16 @@
   payload_available: "Online"
   payload_not_available: "Offline"
 - platform: mqtt
+  name: "Plug 2 Power"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Power'] }}"
+  qos: 2
+  unit_of_measurement: "W"
+  icon: mdi:flash-circle
+  availability_topic: "tele/sonoff-plug-2/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"
+- platform: mqtt
   name: "Plug 1 Voltage"
   state_topic: "tele/sonoff-plug-1/SENSOR"
   value_template: "{{value_json['ENERGY']['Voltage'] }}"
@@ -284,6 +325,16 @@
   payload_available: "Online"
   payload_not_available: "Offline" 
 - platform: mqtt
+  name: "Plug 2 Voltage"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Voltage'] }}"
+  qos: 2
+  unit_of_measurement: "V"
+  icon: mdi:flash-circle
+  availability_topic: "tele/sonoff-plug-2/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline" 
+- platform: mqtt
   name: "Plug 1 Current"
   state_topic: "tele/sonoff-plug-1/SENSOR"
   value_template: "{{value_json['ENERGY']['Current'] }}"
@@ -291,6 +342,16 @@
   unit_of_measurement: "A"
   icon: mdi:flash-circle
   availability_topic: "tele/sonoff-plug-1/LWT"
+  payload_available: "Online"
+  payload_not_available: "Offline"   
+- platform: mqtt
+  name: "Plug 2 Current"
+  state_topic: "tele/sonoff-plug-2/SENSOR"
+  value_template: "{{value_json['ENERGY']['Current'] }}"
+  qos: 2
+  unit_of_measurement: "A"
+  icon: mdi:flash-circle
+  availability_topic: "tele/sonoff-plug-2/LWT"
   payload_available: "Online"
   payload_not_available: "Offline"   
 - platform: season
