--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -193,7 +193,7 @@ views:
             - type: custom:mini-media-player
               entity: media_player.plex_plex_for_vizio
             - type: custom:mini-media-player
-              entity: media_player.living_room_chromecast
+              entity: media_player.living_room_chromecast_2
       - type: custom:mini-graph-card
         name: Washing Machine Daily Cost
         entities:
@@ -241,7 +241,7 @@ views:
             hide: 
               power: true
           - type: custom:mini-media-player
-            entity: media_player.living_room_chromecast
+            entity: media_player.living_room_chromecast_2
             source: full
             hide:
               volume: true
