--- a/automation/automation-system.yaml
+++ b/automation/automation-system.yaml
@@ -18,3 +18,16 @@
           topic: hass/state/washer
           payload: 'Idle'
           retain: 'true'
+
+# restart HA to keep it fresh
+- alias: Restart HA
+  trigger: 
+    platform: time
+    at: "02:00:00"  
+  condition:
+    condition: time
+    weekday:
+    - sun
+    - wed
+  action:
+    - service: homeassistant.restart
