--- a/configuration.yaml
+++ b/configuration.yaml
@@ -135,6 +135,19 @@ binary_sensor:
     country: CA
     province: "ON"
 
+octoprint:
+  - host: 192.168.1.6
+  - api_key: !octoprint_api_key
+  - bed: true
+  - number_of_tools: 2
+  - sensors:
+      monitored_conditions:
+        - 'Current State'
+        - 'Job Percentage'
+        - 'Time Elapsed'
+        - 'Time Remaining'
+
+
 
 ################
 # Notifications
