--- a/configuration.yaml
+++ b/configuration.yaml
@@ -137,7 +137,7 @@ binary_sensor:
 
 octoprint:
   - host: 192.168.1.6
-  - api_key: !octoprint_api_key
+  - api_key: !secret octoprint_api_key
   - bed: true
   - number_of_tools: 2
   - sensors:
