--- a/configuration.yaml
+++ b/configuration.yaml
@@ -137,10 +137,10 @@ binary_sensor:
 
 octoprint:
   - host: 192.168.1.6
-  - api_key: !secret octoprint_api_key
-  - bed: true
-  - number_of_tools: 2
-  - sensors:
+    api_key: !secret octoprint_api_key
+    bed: true
+    number_of_tools: 2
+    sensors:
       monitored_conditions:
         - 'Current State'
         - 'Job Percentage'
