--- a/configuration.yaml
+++ b/configuration.yaml
@@ -134,6 +134,10 @@ binary_sensor:
   - platform: workday
     country: CA
     province: "ON"
+  - platform: octoprint
+    monitored_conditions:
+      - Printing
+      - Printing Error
 
 octoprint:
   - host: 192.168.1.6
@@ -146,6 +150,12 @@ octoprint:
         - 'Job Percentage'
         - 'Time Elapsed'
         - 'Time Remaining'
+
+camera:
+  - platform: mjpeg
+    name: OctoPrint
+    still_image_url: http://192.168.1.115:8090/still.jpg
+    mjpeg_url: http://192.168.1.115:8090/live.mjpg
 
 
 
