--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,6 +2,9 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
+zeroconf:
+  default_interface: true
+
 homeassistant:
   customize: !include customize.yaml
 
