--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,8 @@ proximity:
 
 lovelace:
   mode: yaml
+  resources: !include lovelace/resources/resources.yaml
+
 
 frontend:
   themes: !include themes.yaml
