--- a/configuration.yaml
+++ b/configuration.yaml
@@ -39,11 +39,11 @@ weather:
   - platform: darksky
     api_key: !secret darksky_api
 
-lutron_caseta:
-  host: 192.168.1.19
-  keyfile: ssl/lutron/caseta.key
-  certfile: ssl/lutron/caseta.crt
-  ca_certs: ssl/lutron/caseta-bridge.crt
+# lutron_caseta:
+#   host: 192.168.1.19
+#   keyfile: ssl/lutron/caseta.key
+#   certfile: ssl/lutron/caseta.crt
+#   ca_certs: ssl/lutron/caseta-bridge.crt
 
 august:
   login_method: phone
