--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,7 +27,7 @@ proximity:
 
 lovelace:
   mode: yaml
-  resources: !include lovelace/resources/resources.yaml
+  resources: #!include lovelace/resources/resources.yaml
     - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
       type: module
 
