--- a/configuration.yaml
+++ b/configuration.yaml
@@ -27,9 +27,23 @@ proximity:
 
 lovelace:
   mode: yaml
-  resources: #!include lovelace/resources/resources.yaml
-    - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
-      type: module
+  resources: !include lovelace/resources/resources.yaml
+    # - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
+    #   type: module
+    # - url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
+    #   type: module
+    # - url: /local/vertical-style-card.js?v=0.1    
+    #   type: js
+    # - url: /hacsfiles/button-card/button-card.js
+    #   type: module
+    # - url: /hacsfiles/mini-media-player/mini-media-player-bundle.js
+    #   type: module
+    # - url: /hacsfiles/bar-card/bar-card.js
+    #   type: module
+    # - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
+    #   type: module  
+    # - url: /hacsfiles/lovelace-layout-card/layout-card.js
+    #   type: module
 
 
 frontend:
