--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -115,7 +115,7 @@ views:
             icon: mdi:television
             show_state: true 
             show_name: false
-            entity: media_player.living_room_chromecast_2
+            entity: media_player.living_room_chromecast
             tap_action: 
               action: toggle
             state:
@@ -172,7 +172,7 @@ views:
             - type: custom:mini-media-player
               entity: media_player.plex_plex_for_vizio
             - type: custom:mini-media-player
-              entity: media_player.living_room_chromecast_2
+              entity: media_player.living_room_chromecast
       - type: custom:mini-graph-card
         name: Washing Machine Daily Cost
         entities:
@@ -220,7 +220,7 @@ views:
             hide: 
               power: true
           - type: custom:mini-media-player
-            entity: media_player.living_room_chromecast_2
+            entity: media_player.living_room_chromecast
             source: full
             hide:
               volume: true
