--- a/configuration.yaml
+++ b/configuration.yaml
@@ -41,9 +41,9 @@ weather:
 
 lutron_caseta:
   host: 192.168.1.19
-  keyfile: ssl/lutron/caseta.key
-  certfile: ssl/lutron/caseta.crt
-  ca_certs: ssl/lutron/caseta-bridge.crt
+  keyfile: /home/homeassistant/.homeassistant/ssl/lutron/caseta.key
+  certfile: /home/homeassistant/.homeassistant/ssl/lutron/caseta.crt
+  ca_certs: /home/homeassistant/.homeassistant/ssl/lutron/caseta-bridge.crt
 
 august:
   login_method: phone
