--- a/configuration.yaml
+++ b/configuration.yaml
@@ -147,6 +147,11 @@ octoprint:
     number_of_tools: 2
     sensors:
       monitored_conditions:
+        - 'Current State'
+        - 'Temperatures'
+        - 'Job Percentage'
+        - 'Time Elapsed'
+        - 'Time Remaining'
 
 camera:
   - platform: mjpeg
