--- a/lovelace/resources/resources.yaml
+++ b/lovelace/resources/resources.yaml
@@ -14,5 +14,5 @@
   type: module  
 - url: /hacsfiles/lovelace-layout-card/layout-card.js
   type: module
-- url: /hacsfiles/surveillance-card/surveillance-card.js?v=0
+- url: /hacsfiles/surveillance-card/surveillance-card.js
   type: module
